--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link border-gradient border-gradient-purple" href="/index.html"><span class="span">HOME</span></a>
+              <a class="nav-link border-gradient border-gradient-purple" href="index.html"><span class="span">HOME</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link border-gradient border-gradient-purple" href="/myworks.html"><span class="span">WORKS</span></a>
+              <a class="nav-link border-gradient border-gradient-purple" href="myworks.html"><span class="span">WORKS</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link border-gradient border-gradient-purple" href="/contactme.html"><span class="span">CONTACT ME</span></a>
+              <a class="nav-link border-gradient border-gradient-purple" href="contactme.html"><span class="span">CONTACT ME</span></a>
             </li> 
           </ul>
         </div>  
