--- a/contactme.html
+++ b/contactme.html
@@ -52,13 +52,13 @@
         <section>
           <br><br><br><br><br>
         <ul id="sociallinks">
-          <li><a href="#" class="links" id="link1"><i class="fab fa-facebook-square"></i></a></li>
+          <li><a href="https://www.facebook.com/tushar.dmr" class="links" id="link1"><i class="fab fa-facebook-square"></i></a></li>
           &nbsp;&nbsp; &nbsp;
-          <li><a href="#" class="links" id="link2"><i class="fab fa-github"></i></a></li>
+          <li><a href="https://github.com/dmrt2002" class="links" id="link2"><i class="fab fa-github"></i></a></li>
           &nbsp;&nbsp; &nbsp;
-          <li><a href="#" class="links" id="link3"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="https://www.instagram.com/dmr_tushar_/" class="links" id="link3"><i class="fab fa-instagram"></i></a></li>
           &nbsp;&nbsp;&nbsp;
-          <li><a href="#" class="links" id="link4"><i class="fab fa-linkedin-in"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/r-tushar/" class="links" id="link4"><i class="fab fa-linkedin-in"></i></a></li>
         </ul>
         </section>
       </main>
