--- a/myworks.html
+++ b/myworks.html
@@ -35,13 +35,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link border-gradient border-gradient-purple" href="index.html"><span class="span">HOME</span></a>
+              <a class="nav-link border-gradient border-gradient-purple" href="/index.html"><span class="span">HOME</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link border-gradient border-gradient-purple" href="myworks.html"><span class="span">WORKS</span></a>
+              <a class="nav-link border-gradient border-gradient-purple" href="/myworks.html"><span class="span">WORKS</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link border-gradient border-gradient-purple" href="contactme.html"><span class="span">CONTACT ME</span></a>
+              <a class="nav-link border-gradient border-gradient-purple" href="/contactme.html"><span class="span">CONTACT ME</span></a>
             </li>      
           </ul>
         </div>  
@@ -49,39 +49,48 @@
       <br>
         <section>
           <div class="container">
-            <div class="cards">
-              <div class="content  cafe">
+            <div id="cards" class="cards1">
+              <div class="content">
               <div class="content8x">
-                <div class="text-center">
-                  br><br><br><br><br><br><br><br>
+                <div class="name">
+                   imaginary cafe
+                </div>
+                <div class="text">
+                  it is an cafe website which has a login feature with a database connected to it
+                  <br>
                   <button onClick="javascript:window.open('http://r-tushar.freecluster.eu/?i=1', '_blank');" id = "cafe" class="raise">VIEW WEBSITE</button>
-                  <br><br><br><br><br><br><br><br>
                 </div>
               </div>
               </div>
          </div>
-         <div class="cards ">
-          <div class="content calci">
+         <div id="cards" class="cards2">
+          <div class="content">
           <div class="content8x">
-            <div class="text-center">
-              br><br><br><br><br><br><br><br>
+            <div class="name">
+              calculator
+            </div>
+            <div class="text">
+              it is a scientific calculator created using vanilla js
+              <br>
               <button onClick="javascript:window.open('https://dmrt2002.github.io/calculator.net/', '_blank');"id = "calci" class="raise">VIEW WEBSITE</button>
-              <br><br><br><br><br><br><br><br>
             </div>
           </div>
           </div>
      </div>
-     <div class="cards">
-      <div class="content tic">
-      <div class="content8x ">
-      <div class="text-center">
-        br><br><br><br><br><br><br><br>
-        <button onClick="javascript:window.open('https://dmrt2002.github.io/tic-tac-toe/', '_blank');" id = "tic" class="raise">VIEW WEBSITE</button>
-        <br><br><br><br><br><br><br><br>
-      </div>
-      </div>
-      </div>
- </div>
+      <div id="cards" class="cards3">
+        <div class="content">
+        <div class="content8x">
+          <div class="name">
+      tic tac toe
+        </div>
+        <div class="text">
+          it is a unbeateable tic tac toe game built with js and minmax algorithm
+          <br>
+          <button onClick="javascript:window.open('https://dmrt2002.github.io/tic-tac-toe/', '_blank');" id = "tic" class="raise">VIEW WEBSITE</button>
+        </div>
+        </div>
+        </div>
+     </div>
      </div>
      <br><br><br>
 
