--- a/contactme.html
+++ b/contactme.html
@@ -37,30 +37,81 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link border-gradient border-gradient-purple" href="index.html"><span class="span">HOME</span></a>
+              <a class="nav-link border-gradient border-gradient-purple" href="/index.html"><span class="span">HOME</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link border-gradient border-gradient-purple" href="myworks.html"><span class="span">WORKS</span></a>
+              <a class="nav-link border-gradient border-gradient-purple" href="/myworks.html"><span class="span">WORKS</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link border-gradient border-gradient-purple" href="contactme.html"><span class="span">CONTACT ME</span></a>
+              <a class="nav-link border-gradient border-gradient-purple" href="/contactme.html"><span class="span">CONTACT ME</span></a>
             </li>       
           </ul>
         </div>  
       </nav>
-      <br> 
-        <section>
-          <br><br><br><br><br>
-        <ul id="sociallinks">
-          <li><a href="https://www.facebook.com/tushar.dmr" target="_blank" class="links" id="link1"><i class="fab fa-facebook-square"></i></a></li>
-          &nbsp;&nbsp; &nbsp;
-          <li><a href="https://github.com/dmrt2002" target="_blank" class="links" id="link2"><i class="fab fa-github"></i></a></li>
-          &nbsp;&nbsp; &nbsp;
-          <li><a href="https://www.instagram.com/dmr_tushar_/" target="_blank" class="links" id="link3"><i class="fab fa-instagram"></i></a></li>
-          &nbsp;&nbsp;&nbsp;
-          <li><a href="https://www.linkedin.com/in/r-tushar/" target="_blank" class="links" id="link4"><i class="fab fa-linkedin-in"></i></a></li>
-        </ul>
-        </section>
+      <section>
+        <div class="form_wrapper">
+          <div class="form_container">
+            <div class="title_container">
+              <h2 class="hidden">CONTACT ME</h2>
+            </div>
+            <form>
+              <div class="row clearfix">
+                <div class="col_half">
+                  <label>First name</label>
+                  <div class="input_field"> <span><i aria-hidden="true" class="fa fa-user"></i></span>
+                    <input type="text" name="first_name" placeholder="John" required />
+                  </div>
+                </div>
+                <div class="col_half">
+                  <label>Last name</label>
+                  <div class="input_field"> <span><i aria-hidden="true" class="fa fa-user"></i></span>
+                    <input type="text" name="last_name" placeholder="Doe" />
+                  </div>
+                </div>
+              </div>
+              <div class="row clearfix">
+                <div class="email-field">
+                  <label>Email</label>
+                  <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
+                    <input type="email" name="email" placeholder="johndoe@gmail.com" required />
+                  </div>
+                </div>
+              </div>
+              <div class="row clearfix">
+                <div>
+                  <label>How can i help you?</label>
+                  <div class="textarea_field"> <span><i aria-hidden="true" class="fa fa-comment"></i></span>
+                    <textarea cols="46" rows="3" name="comments"></textarea>
+                  </div>
+                </div>
+              </div>
+              <button class="button">
+                <span class="submit">Submit</span>
+                <span class="loading"><i class="fa fa-refresh"></i></span>
+                <span class="check"><i class="fa fa-check"></i></span>
+              </button>
+            </form>
+          </div>
+        </div>
+        <br><br>
+        <script>
+          const button = document.querySelector('.button');
+const submit = document.querySelector('.submit');
+
+function toggleClass() {
+	this.classList.toggle('active');
+}
+
+function addClass() {
+	this.classList.add('finished');
+}
+
+button.addEventListener('click', toggleClass);
+button.addEventListener('transitionend', toggleClass);
+button.addEventListener('transitionend', addClass);
+        </script>
+      </section>
+
       </main>
     </body>
     </html>
